--- a/fullscreen.html
+++ b/fullscreen.html
@@ -16,6 +16,7 @@
         iframe {
             width: 100%;
             height: calc(100% - 40px);
+            background-color: black;
         }
         .bar {
             height: 40px;
